--- a/chatbot.ejs
+++ b/chatbot.ejs
@@ -128,7 +128,7 @@
     appendMessage('user', query);
     chatInput.value = '';
 
-    const response = await fetch('https://d117-218-4-57-148.ngrok-free.app/ask', {
+    const response = await fetch('https://***.ngrok-free.app/ask', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       credentials: 'include',
